# RoboMNIST

./: .gitignore  README.md
examples/: true_trajectory_read.ipynb  wifi_csi_read.ipynb
examples/data/: Rp01_Ac6_Vhigh_Ar1_UNC187_Rxall_pos.json  Rp03_Ac4_Vhigh_Ar2_UNC082_Rxall_pos.json
monitor/src/pack_camera/: package.xml  setup.cfg  setup.py
monitor/src/pack_camera/pack_camera/: camera_node.py  camera_show_node.py
monitor/src/pack_util/: package.xml  setup.cfg  setup.py
monitor/src/pack_util/param/: params.yaml
monitor/src/pack_wifi/: package.xml  setup.cfg  setup.py
monitor/src/pack_wifi/pack_wifi/: csi_node.py  heartbeat_node.py
motion_control/: CMakeLists.txt  config.json  kian_action_arc.cpp  kian_action_arc.h  main.cpp  network_handler.cpp  network_handler.h
resources/: diagram.key
